packages/llvm/src/tests/functions/snapshots/llvm__tests__functions__    function foo(x : number) : number {        return x + 1;    }        let y = foo(5);.snap
---
source: packages/llvm/src/tests/functions/mod.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %y_ = alloca double, align 8
  %"0" = call double @foo_(double 5.000000e+00)
  store double %"0", double* %y_, align 8
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

define double @foo_(double %0) {
main:
  %x_ = alloca double, align 8
  store double %0, double* %x_, align 8
  %"2" = load double, double* %x_, align 8
  %"1" = fadd double %"2", 1.000000e+00
  ret double %"1"
}

