packages/llvm/src/tests/functions/snapshots/llvm__tests__functions__    function foo(x : number) : void {        return;    }        const x = foo;    x()    .snap
---
source: packages/llvm/src/tests/functions/mod.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() personality void ()* @__typescript__personality {
entry:
  invoke void @foo_()
          to label %Block_0 unwind label %Block_1

Block_0:                                          ; preds = %entry
  ret void

Block_1:                                          ; preds = %entry
  %"0" = landingpad i64
          cleanup
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

define void @foo_(double %0) {
main:
  %x_ = alloca double, align 8
  store double %0, double* %x_, align 8
  ret void
}

