packages/llvm/src/tests/functions/snapshots/llvm__tests__functions__    function foo(x : number) : void {        return;    }        foo(5);.snap
---
source: packages/llvm/src/tests/functions/mod.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  call void @foo_(double 5.000000e+00)
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

define void @foo_(double %0) {
main:
  %x_ = alloca double, align 8
  store double %0, double* %x_, align 8
  ret void
}

