packages/llvm/src/tests/functions/snapshots/llvm__tests__functions__    function foo(x : number, a : number, c : boolean) : boolean {                return !false;    }.snap
---
source: packages/llvm/src/tests/functions/mod.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  ret void
}

define void @__typescript__personality() {
entry:
  ret void
}

define i1 @foo_(double %0, double %1, i1 %2) {
main:
  %x_ = alloca double, align 8
  store double %0, double* %x_, align 8
  %a_ = alloca double, align 8
  store double %1, double* %a_, align 8
  %c_ = alloca i1, align 1
  store i1 %2, i1* %c_, align 1
  ret i1 true
}

