packages/llvm/src/tests/functions/snapshots/llvm__tests__functions__    function foo(x : {a : number}) : number {        return x.a;    };    const y = foo({a : 5});        .snap
---
source: packages/llvm/src/tests/functions/mod.rs
expression: output

---
; ModuleID = 'main'
source_filename = "main"

define void @main() {
entry:
  %y_ = alloca double, align 8
  %"1" = alloca <{ double }>, align 8
  %"3" = getelementptr <{ double }>, <{ double }>* %"1", i32 1, i32 0
  store double 5.000000e+00, double* %"3", align 8
  %"0" = call double @foo_(<{ double }>* %"1")
  store double %"0", double* %y_, align 8
  ret void
}

define double @foo_(<{ double }>* %0) {
main:
  %"3" = getelementptr <{ double }>, <{ double }>* %0, i32 1, i32 0
  %"1" = load double, double* %"3", align 8
  ret double %"1"
}

